--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,18 +34,30 @@ dependencies {
     compile 'com.android.support:multidex:1.0.1'
     compile 'com.android.support:appcompat-v7:25.1.0'
     compile 'com.android.support:support-v4:25.1.0'
-    compile 'com.firebaseui:firebase-ui:0.3.1'
+
     compile 'com.facebook.android:facebook-android-sdk:4.11.0'
     /*compile 'com.facebook.android:facebook-android-sdk:[4,5)'*/
-    compile 'com.google.android.gms:play-services:10.0.1'
-    compile 'com.firebase:firebase-client-android:2.5.2'
+    //compile 'com.firebase:firebase-client-android:2.5.2'
     compile 'com.android.support:design:25.1.0'
     compile 'de.hdodenhof:circleimageview:2.0.0'
     compile 'com.android.support:recyclerview-v7:25.1.0'
     compile 'com.squareup.picasso:picasso:2.3.2'
     compile 'cn.hiroz:uninstallfeedback-lib:1.2.5@aar'
-    compile 'com.google.firebase:firebase-auth:10.0.1'
-    testCompile 'junit:junit:4.12'
+    compile 'com.google.android.gms:play-services:10.2.1'
+    compile 'com.google.firebase:firebase-auth:10.2.1'
+    compile 'com.google.firebase:firebase-storage:10.2.1'
+
+
+    //IMAGE LOAD
+    compile 'com.github.bumptech.glide:glide:3.7.0'
+
+    compile 'com.firebaseui:firebase-ui-database:1.2.0'
+
+    //CHAT UI
+    compile 'hani.momanii.supernova_emoji_library:supernova-emoji-library:0.0.2'
+    compile 'me.himanshusoni.chatmessageview:chat-message-view:1.0.3'
+
+
 }
 
 
