--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,9 @@
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.VIBRATE" />
 
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
     <application
         android:name=".FireBase.AppConfig"
         android:allowBackup="true"
@@ -69,12 +72,7 @@
         <activity
             android:name=".ViewPager.ViewPagerActivity"
             android:screenOrientation="portrait" />
-        <activity
-            android:name=".Chat.UserListActivity"
-            android:screenOrientation="portrait" />
-        <activity
-            android:name=".Chat.ChatActivity"
-            android:screenOrientation="portrait" />
+
         <activity
             android:name=".ui.Tracking.ResultActivity"
             android:screenOrientation="portrait" />
@@ -89,7 +87,9 @@
         <activity android:name=".ui.Statistics.StatisticsActivity" />
         <activity android:name=".ui.Setting.SettingActivity" />
         <activity android:name=".ui.Setting.ChangePasswordActivity" />
-        <activity android:name=".Alarm.AlarmListActivity" android:label="@string/app_name"></activity>
+        <activity
+            android:name=".Alarm.AlarmListActivity"
+            android:label="@string/app_name"></activity>
         <activity android:name=".Alarm.AlarmScreen" />
         <activity android:name=".Alarm.AlarmDetailsActivity" />
 
@@ -109,11 +109,29 @@
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
+
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
+
                 <data android:scheme="@string/fb_login_protocol_scheme" />
             </intent-filter>
         </activity>
+
+        <provider
+            android:name="android.support.v4.content.FileProvider"
+            android:authorities="${applicationId}.provider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/provider_paths" />
+        </provider>
+
+        <activity android:name=".chatApp.MainActivity" />
+
+        <activity
+            android:name=".chatApp.view.FullScreenImageActivity"
+            android:theme="@style/AppThemeFullScreenImage" />
     </application>
 
 </manifest>
